--- a/Fundamentacion_Matematica/Cuadernos/t1.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/t1.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Los tensores constituyen el pilar fundamental de las estructuras de datos utilizadas en la inteligencia artificial (IA). Motores de aprendizaje profundo como Torch o TensorFlow se basan en Numpy, la librería por excelencia de Python para el manejo de tensores. Recientemente TensorFlow anunció el desarrollo propio de su librería de tensores en un intento de liberarse de Numpy.\n",
     "\n",
-    "Desde el punto vista del aprendizaje de máquinas, los tensores con arreglos multidimensionales que generalizan las matrices a múltiples y a los cuales se les agregan algunas características adicionales como la diferenciación automática, que desarrollaremos en otra lección. \n"
+    "Desde el punto vista del aprendizaje de máquinas, los tensores con arreglos multidimensionales que generalizan las matrices a múltiples y a los cuales se les agregan algunas características adicionales como la diferenciación automática, que desarrollaremos en otra lección. "
    ]
   },
   {
@@ -45,9 +45,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La `dimensión de un tensor` se define como el número de índices requeridos para indicar la posición de un elemento en el tensor. En la imagen, es escalar es un tensor de dimensión cero, porque no se requiere ningún índice para determinar la posición de su único elemento. Cada índice requerido para indicar la posición de un elemento determina una dimensión del tensor. Así en ejemplo, de arriba el escalar tiene dimensión cero, el vector dimensión 1, la matriz es de  dimensión 2 y el último objeto a la derecha es un tensor de de dimensión 4. \n",
+    "\n",
+    "El `tamaño de un tensor` corresponde al número de elementos que se tienen al largo de cada dimensión. En la imagen el vector tiene tamaño 2 , indicado (2,) por acuerdo de notación. La matriz tiene tamaño (2,3) y el tensor de la derecha tiene tamaño (1,4,1,2).\n",
+    "\n",
+    "Para entender porque este último tensor tiene dimensión cuatro, observe lo siguiente. Hay un contenedor externo. Al representar el tensor en esta forma gráfica se da a entender que esta es la primera capa de varias posibles con la misma estructura. Al interior hay 4 compartimientos de tamaño (1,2), completando así el tamaño (1,4,1,2).\n",
+    "()\n",
+    "\n",
+    "La siguiente ilustra una abstracción de juguete de un video con tres cuadros(frames) de color de forma (shape) $(2, 2)$ cada uno. Este seguro de entender la lógica de organización del tensor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/tensores.png\" width=\"600\" height=\"300\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/ten_tensor_4_d.jpg\" width=\"600\" height=\"300\" /> \n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -58,11 +72,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La `dimensión de un tensor` se define como el número de índices requeridos para indicar la posición de un elemento en el tensor. En la imagen, es escalar es un tensor de dimensión cero, porque no se requiere ningún índice para determinar la posición de su único elemento. Cada índice requerido para indicar la posición de un elemento determina una dimensión del tensor. Así en ejemplo, de arriba el escalar tiene dimensión cero, el vector dimensión 1, la matriz es de  dimensión 2 y el último objeto a la derecha es un tensor de de dimensión 4. \n",
+    "La próxima imagen muestra la organización de diferentes tipos de tensores.\n",
     "\n",
-    "El `tamaño de un tensor` corresponde al número de elementos que se tienen al largo de cada dimensión. En la imagen el vector tiene tamaño 2 , indicado (2,) por acuerdo de notación. La matriz tiene tamaño (2,3) y el tensor de la derecha tiene tamaño (1,4,1,2).\n",
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/ten_tensores.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "</center>\n",
+    "<figcaption>\n",
+    "<p style=\"text-align:center\">Ejemplos de tensores de diferentes  dimensiones y tamaños</p>\n",
+    "</figcaption>\n",
+    "</figure>\n",
     "\n",
-    "Para entender porque este último tensor tiene dimensión cuatro, observe lo siguiente. Hay un contenedor externo. Al representar el tensor en esta forma gráfica se da a entender que esta es la primera capa de varias posibles con la misma estructura. Al interior hay 4 compartimientos de tamaño (1,2), completando así el tamaño (1,4,1,2)."
+    "Fuente: A. Montenegro"
    ]
   },
   {
@@ -77,16 +98,33 @@
    "metadata": {},
    "source": [
     "El concepto de tensor en inteligencia artificial difiere del conocido en matemáticas y física. Un tensor desde el punto de vista matemático es a menudo, representado por una matriz de componentes que describen funciones relevantes para las coordenadas de un espacio. En pocas palabras, un tensor es una matriz de números que se transforman de acuerdo con ciertas reglas bajo un cambio de coordenadas. Un tensor se puede definir como un solo punto, una colección de puntos aislados, o se puede definir como un continuo de puntos en los que los elementos del tensor son funciones de posición, y el tensor forma lo que se conoce como campo tensor. Esto significa que en lugar de estar representado por un solo punto, el tensor se define en múltiples puntos juntos en un espacio.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/tensor_mat.png\" width=\"400\" height=\"400\" /> \n",
+    "</center>\n",
+    "</figure>\n",
     "\n",
-    "imagen\n",
-    "Fuente: [deepai](https://deepai.org/machine-learning-glossary-and-terms/tensor)\n",
     "\n",
+    "Fuente: [Wikipedia](https://en.wikipedia.org/wiki/Tensor).\n",
     "\n",
-    "El lector interasado en el concepto matemático , puede consultar en [Wikipedia]().\n",
+    "El lector interesado en el concepto matemático , puede consultar en [Wikipedia](https://en.wikipedia.org/wiki/Tensor)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "Adicionalmente la dimensión de un tensor es un concepto algebráico y no geométrico. En geometría cada componente en un vector representa una dimensión. Entonces el vector $(3,4)$ es un vector bidimensional desde el punto de vista geométrico. Gráficamente lo representamos en un plano como se muestra en la siguiente imagen. Desde el punto de vista tensorial, el mismo objeto es unidimensional, debido a que solamente se necesita un índice para identificar cada uno de sus elementos. Esta la definición que nos interesa aquí.El siguiente código dibuja algunos vectores en $\\mathbb{R}^2$. Los  matemáticos dicen que estos objetos geométricos tienen dimensión geométrica 2. Por favor revisa cada línea del código para estar seguro que lo entiende.\n",
+    "Adicionalmente la dimensión de un tensor es un concepto algebraico y no geométrico. En geometría cada componente en un vector representa una dimensión. Entonces el vector $(3,4)$ es un vector bidimensional desde el punto de vista geométrico. Gráficamente lo representamos en un plano como se muestra en la siguiente imagen. Desde el punto de vista tensorial, el mismo objeto es unidimensional, debido a que solamente se necesita un índice para identificar cada uno de sus elementos. Esta la definición que nos interesa aquí. El siguiente código dibuja algunos vectores en $\\mathbb{R}^2$. Los  matemáticos dicen que estos objetos geométricos tienen dimensión geométrica 2. Por favor revisa cada línea del código para estar seguro que lo entiende.\n",
     "\n",
-    "Por favor revisa cada línea del siguiente código para estar asegurarse que lo entiende. Culaquier duda consulte la documentación de Python. `ax.quiver`  crea el gráfico de los vectores, a partir de las coordenadas en $X, Y, U, V$."
+    "Por favor revisa cada línea del siguiente código para estar asegurarse que lo entiende. Cualquier duda consulte la documentación de Python. `ax.quiver`  crea el gráfico de los vectores, a partir de las coordenadas en $X, Y, U, V$."
    ]
   },
   {
@@ -220,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como se dijo arrib, En geometría la dimensión hace referencia al número de componentes con el que se representa un objeto en un espacio. Por lo general usamos el espacio Euclideano, digamos $\\mathbb{R}^2$ o $\\mathbb{R}^3$.\n",
+    "Como se dijo arriba, En geometría la dimensión hace referencia al número de componentes con el que se representa un objeto en un espacio. Por lo general usamos el espacio Euclidiano, digamos $\\mathbb{R}^2$ o $\\mathbb{R}^3$.\n",
     "\n",
     "Los tensores son objetos de tipo algebraico. La dimensión de un tensor se define como el número de índices requerido para representar todos a los elementos del tensor.\n",
     "\n",
@@ -229,7 +267,11 @@
     "1. El vector $w = (w_1,w_2, w_3)$ tiene dimensión geométrica 3.\n",
     "2. El tensor $w = (w_1,w_2, w_3)$ tiene dimensión 1 y tamaño (*shape* = 3).\n",
     "\n",
-    "**Asegúrese de comprender la diferencia**."
+    "**Asegúrese de comprender la diferencia**.\n",
+    "\n",
+    "El tipo de valores que puede contener un vector debe ser de la misma clase por convención. Por ejemplo, si $w$ es un vector de números reales, entonces $z=(3.2\\;, 1.5 \\;, -7.2 \\;, 0.0)$ es un vector real de tamaño cuatro. Matemáticamente se dice que el vector $z$ tiene dimensión cuatro. En otras palabras, la dimensión matemática de un vector es su tamaño.\n",
+    "\n",
+    "El contenido y tipo de datos de un vector depende del contexto en que se está utilizando. Supongamos que se trata de construir una máquina de aprendizaje profundo que identifique dígitos escritos a mano en tonalidades de gris. Lo que se acostumbra a hacer es digitalizar las imágenes correspondientes, con lo cual se obtiene una matriz de números de tamaño digamos $255 \\times 255$. Esta matriz puede fácilmente transformarse a un vector, o mejor diríamos un tensor de dimensión 1, con $N = 255^2$ componentes."
    ]
   },
   {
@@ -243,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mientras no se diga lo contrario, asumiremos que los tensores que usaremos tienen el mismo tamaño. Por facilidad, en las definciones usaremos tensores unidimensionales de tamaño $n=3$. En realidad el tamaño de los tensores unidimensionales pueden ser cualquier número entero positivo $n$ y las definciones se generalizan de forma obvia."
+    "Mientras no se diga lo contrario, asumiremos que los tensores que usaremos tienen el mismo tamaño. Por facilidad, en las definiciones usaremos tensores unidimensionales de tamaño $n=3$. En realidad el tamaño de los tensores unidimensionales pueden ser cualquier número entero positivo $n$ y las definiciones se generalizan de forma obvia."
    ]
   },
   {
@@ -316,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El producto de Hadamard, o producto elemento por elemento entre dos vectores se donota $a \\odot b$ y se define como:\n",
+    "El producto de Hadamard, o producto elemento por elemento entre dos vectores se denota $a \\odot b$ y se define como:\n",
     "\n",
     "$$\n",
     "c = a\\odot b = (a_1*b_1, a_2*b_2,a_3*b_3).\n",
@@ -559,14 +601,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#4CC9F0\">Combinación de arreglos</span>"
+    "### <span style=\"color:#4CC9F0\"> Apilamiento  de arreglos (stack)</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Vertical**. Con la función *vstack()*. Concatena a lo largo del eje 0."
+    "#### Vertical: `vstack`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Con la función *vstack()*. Apila a lo largo del eje 0."
    ]
   },
   {
@@ -607,7 +658,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Horizontal**. Con la función *hstack()* Concatena a lo largo del eje 1."
+    "#### Horizontal: `hstack`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Con la función *hstack()*. Apila a lo largo del eje 1."
    ]
   },
   {
@@ -642,6 +702,97 @@
     "print('z = {}\\n'.format(z))\n",
     "\n",
     "print('tamaño final = {}'.format(z.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apilamiento a lo largo de cualquier eje. `stack`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Con la función *stack()*. Apila a lo largo cualquier  eje. La función *stack()* puede usarse para los dos casos anteriores cambiando el eje a lo largo del cual se hace la apilación. Revise el siguiente ejemplo en el cual apilamos una lista de arreglos a lo largo de cada uno de los ejes.\n",
+    "\n",
+    "Generamos una lista de 3 arreglos, cada uno de forma $(3, 4)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Longitud de arrays = 3\n",
+      "arrays[0] = \n",
+      " [[ 0.27489071 -0.01658615 -1.29846514  0.38246922]\n",
+      " [-1.07830623 -0.25497533 -0.92488366  2.7538324 ]\n",
+      " [-1.05486389 -0.35849278 -0.79294011  0.6090218 ]]\n",
+      "arrays[1] = \n",
+      " [[ 0.06443883  1.58202301  2.40406082 -1.08826724]\n",
+      " [ 0.14263298 -0.2733137  -0.48660215 -0.0996398 ]\n",
+      " [ 0.28154351  1.35211661 -1.37996137  0.30983727]]\n",
+      "arrays[1] = \n",
+      " [[ 0.55115766 -1.54684105  1.49651068 -1.11611737]\n",
+      " [ 0.37004679 -1.21559351 -0.37146047 -2.00565897]\n",
+      " [-1.65542207  0.58912902 -0.4928767   0.23027823]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arrays = [np.random.randn(3, 4) for _ in range(3)]\n",
+    "print('Longitud de arrays =', len(arrays))\n",
+    "print('arrays[0] = \\n', arrays[0])\n",
+    "print('arrays[1] = \\n', arrays[1])\n",
+    "print('arrays[1] = \\n', arrays[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.27489071, -0.01658615, -1.29846514,  0.38246922],\n",
+       "        [-1.07830623, -0.25497533, -0.92488366,  2.7538324 ],\n",
+       "        [-1.05486389, -0.35849278, -0.79294011,  0.6090218 ]],\n",
+       "\n",
+       "       [[ 0.06443883,  1.58202301,  2.40406082, -1.08826724],\n",
+       "        [ 0.14263298, -0.2733137 , -0.48660215, -0.0996398 ],\n",
+       "        [ 0.28154351,  1.35211661, -1.37996137,  0.30983727]],\n",
+       "\n",
+       "       [[ 0.55115766, -1.54684105,  1.49651068, -1.11611737],\n",
+       "        [ 0.37004679, -1.21559351, -0.37146047, -2.00565897],\n",
+       "        [-1.65542207,  0.58912902, -0.4928767 ,  0.23027823]]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.stack(arrays, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " A lo largo del eje 1."
    ]
   },
   {
@@ -758,7 +909,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color:#4361EE\">Por hacer (Tarea)</span>"
+    "## <span style=\"color:#4361EE\">Ejercicios</span>"
    ]
   },
   {
@@ -769,7 +920,8 @@
     "\n",
     "1. Indexación de tensores NumPy.\n",
     "2. Rebanado (slicing) tensores.\n",
-    "3. Reorganización (Reshape) de tensores."
+    "3. Reorganización (Reshape) de tensores.\n",
+    "\n"
    ]
   },
   {
@@ -781,9 +933,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Revise la lección de Numpy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:#4CC9F0\">Ejercicios adicionales</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Cree una lista 5 de arreglos aleatorios de forma $(2,4,3,5)$.\n",
+    "1. Apile los arreglos por cada uno de los cuatro ejes.\n",
+    "1. Interprete los resultados."
    ]
   }
  ],
