--- a/Fundamentacion_Matematica/Cuadernos/t2.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/t2.ipynb
@@ -554,7 +554,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/producto_tensorial.png\" width=\"600\" height=\"300\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/producto_tensorial.png\" width=\"800\" height=\"800\" /> \n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -635,12 +635,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([[[1,2],[3,4],[5,6]],[[7,8],[9,10],[11,12]],[[13,14],[15,16],[17,18]],\n",
-    "              [[19,20],[21,22],[23,24]]])\n",
+    "import numpy as np\n",
+    "a = np.array([[[1,2],\n",
+    "               [3,4],\n",
+    "               [5,6]],\n",
+    "              \n",
+    "              [[7,8],\n",
+    "               [9,10],\n",
+    "               [11,12]],\n",
+    "              \n",
+    "              [[13,14],\n",
+    "               [15,16],\n",
+    "               [17,18]],\n",
+    "              \n",
+    "              [[19,20],\n",
+    "               [21,22],\n",
+    "               [23,24]]])\n",
+    "\n",
     "b = np.array([[10],[100]])\n",
     "c = a.dot(b)   \n",
     "d = a@b\n",
@@ -652,14 +667,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a= [[[ 1  2]\n",
+      "a.shape = (4, 3, 2)\n",
+      "a =\n",
+      " [[[ 1  2]\n",
       "  [ 3  4]\n",
       "  [ 5  6]]\n",
       "\n",
@@ -674,13 +691,15 @@
       " [[19 20]\n",
       "  [21 22]\n",
       "  [23 24]]]\n",
-      "a.shape= (4, 3, 2)\n",
       "\n",
-      "b= [[ 10]\n",
+      "b.shape = (2, 1)\n",
+      " b=\n",
+      " [[ 10]\n",
       " [100]]\n",
-      "b.shape= (2, 1)\n",
       "\n",
-      "c= [[[ 210]\n",
+      "c.shape = (4, 3, 1)\n",
+      "c =\n",
+      " [[[ 210]\n",
       "  [ 430]\n",
       "  [ 650]]\n",
       "\n",
@@ -696,7 +715,9 @@
       "  [2410]\n",
       "  [2630]]]\n",
       "\n",
-      "d= [[[ 210]\n",
+      "d.shape = (4, 3, 1)\n",
+      "d =\n",
+      " [[[ 210]\n",
       "  [ 430]\n",
       "  [ 650]]\n",
       "\n",
@@ -711,35 +732,76 @@
       " [[2190]\n",
       "  [2410]\n",
       "  [2630]]]\n",
-      "d.shape= (4, 3, 1)\n",
       "\n",
+      "e.shape =\n",
+      " (3, 1)\n",
       "e= [[210]\n",
       " [430]\n",
       " [650]]\n",
       "\n",
-      "a_1.shape (3, 2)\n",
-      "\n",
-      "e.shape= (3, 1)\n"
+      "a_0.shape (3, 2)\n",
+      "a_0 =\n",
+      " [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
      ]
     }
    ],
    "source": [
-    "print('a=', a)\n",
-    "print('a.shape=',a.shape)\n",
+    "print('a.shape =',a.shape)\n",
+    "print('a =\\n', a)\n",
     "print()\n",
-    "print('b=', b)\n",
-    "print('b.shape=',b.shape)\n",
+    "\n",
+    "print('b.shape =',b.shape)\n",
+    "print(' b=\\n', b)\n",
     "print()\n",
-    "print('c=', c)\n",
+    "\n",
+    "print('c.shape =',c.shape)\n",
+    "print('c =\\n', c)\n",
     "print()\n",
-    "print('d=', d)\n",
-    "print('d.shape=',d.shape)\n",
+    "\n",
+    "print('d.shape =',d.shape)\n",
+    "print('d =\\n', d)\n",
     "print()\n",
+    "\n",
+    "print('e.shape =\\n',e.shape)\n",
     "print('e=', e)\n",
     "print()\n",
-    "print('a_1.shape',a_0.shape)\n",
-    "print()\n",
-    "print('e.shape=',e.shape)"
+    "\n",
+    "print('a_0.shape',a_0.shape)\n",
+    "print('a_0 =\\n', a_0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#4361EE\">Ejercicios</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con estos ejercicios hacemos una generalización adicional del producto tensorial. \n",
+    "\n",
+    "1. Cree con Numpy un tensor *a* aleatorio de forma $(3, 4, 5)$.\n",
+    "1. Cree con Numpy un tensor *b* aleatorio de forma $(5, 2)$.\n",
+    "1. Calcule el producto  $c = a.dot(b)$\n",
+    "1. Escriba el resultado. \n",
+    "1. Calcule la forma del tensor *c*.\n",
+    "1. Explique como se ha hecho el producto.\n",
+    "1. Cambie la forma de los tensores arbitrariamente y reintente el cálculo.\n",
+    "1. Explique lo ocurrido.\n",
+    "\n",
+    "1. Cree con Numpy un tensor *a* aleatorio de forma $(3, 4, 5)$.\n",
+    "1. Cree con Numpy un tensor *b* aleatorio de forma $(2, 5, 3)$.\n",
+    "1. Calcule el producto  $c = a.dot(b)$\n",
+    "1. Escriba el resultado. \n",
+    "1. Calcule la forma del tensor *c*.\n",
+    "1. Explique como se ha hecho el producto.\n",
+    "1. Cambie la forma de los tensores arbitrariamente y reintente el cálculo.\n",
+    "1. Explique lo ocurrido."
    ]
   }
  ],
