--- a/Fundamentacion_Matematica/Cuadernos/t4.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/t4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fossil-ecology",
+   "id": "public-kingston",
    "metadata": {},
    "source": [
     "# <span style=\"color:#F72585\"><center>Tensores y distribuciones de probabilidad</center></span>"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-virgin",
+   "id": "nominated-yield",
    "metadata": {},
    "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
@@ -18,17 +18,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confirmed-harvard",
+   "id": "sharp-pulse",
    "metadata": {},
    "source": [
-    "En esta lección estudiaremos una red neuronal artifical de clasificación. \n",
     "\n",
-    "Al finalizar vamos a concluir que lo que hace la red neuronal es transformar un tensor en una distribución de probabilidad."
+    "En esta lección estudiaremos una red neuronal artificial de clasificación. Al finalizar vamos a concluir que lo que hace la red neuronal es transformar un tensor en una distribución de probabilidad."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "official-pendant",
+   "id": "gorgeous-plane",
    "metadata": {},
    "source": [
     "## <span style=\"color:#4361EE\">Red Neuronal de clasificación</span>"
@@ -36,15 +35,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innocent-groove",
+   "id": "complex-brook",
    "metadata": {},
    "source": [
-    "La siguiente imagen ilustra una red neural artificial que se entrenará para clasificar objetos en tres clases."
+    "La siguiente imagen ilustra una red neuronal artificial que se entrenará para clasificar objetos en tres clases."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "943fd8b6",
+   "id": "matched-journalism",
    "metadata": {},
    "source": [
     "<figure>\n",
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aboriginal-schedule",
+   "id": "tight-inflation",
    "metadata": {},
    "source": [
     "La red tiene tres capas:\n",
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-credit",
+   "id": "textile-appraisal",
    "metadata": {},
    "source": [
     "### <span style=\"color:#4CC9F0\">Modo Inferencia</span>"
@@ -82,25 +81,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raised-incident",
+   "id": "heavy-membrane",
    "metadata": {},
    "source": [
-    "Recuerde que la red neuronal artifical es una función matemática, no lineal, que toma una entrada y produce una salida."
+    "Recuerde que la red neuronal artificial es una función matemática, no lineal, que toma una entrada y produce una salida."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "approximate-criminal",
+   "id": "caring-intranet",
    "metadata": {},
    "source": [
     "Una vez la red es entrenada (ver modo entrenamiento abajo), la red hace el siguiente trabajo. \n",
     "\n",
-    "1. Recibe un tensor, que por ejemplo representa una imágen, las características de una flor (iris, ...) y lo transforma (o proyecta) de manera no lineal en un espacio, representado por la capa oculta. La siguiente imagen puede darle una idea de lo que ocurre."
+    "1. Recibe un tensor, que por ejemplo representa una imagen, las características de una flor (iris, ...) y lo transforma (o proyecta) de manera no lineal en un espacio, representado por la capa oculta. La siguiente imagen puede darle una idea de lo que ocurre."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "figured-slovak",
+   "id": "intimate-theorem",
    "metadata": {},
    "source": [
     "<figure>\n",
@@ -114,19 +113,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spare-modeling",
+   "id": "ideal-jonathan",
    "metadata": {},
    "source": [
     "2. En este nuevo espacio, el tensor es identificado con unas nuevas coordenadas. Aquí puede imaginarse que se encuentra en la capa oculta (hidden).\n",
     "\n",
-    "3. Ahora, dependiendo del número de categorias o clases en el problema, digamos tres, hace una transformación hacia un nuevo espacio que tiene una dimensión igual al número de categorías. Esta transformación ubica al tensor en un espacio que podemos denominar de pre-probabilidad. \n",
+    "3. Ahora, dependiendo del número de categorías o clases en el problema, digamos tres, hace una transformación hacia un nuevo espacio que tiene una dimensión igual al número de categorías. Esta transformación ubica al tensor en un espacio que podemos denominar de pre-probabilidad. \n",
     "\n",
     "De acuerdo a los patrones que haya recibido la red en el modo entrenamiento, el espacio de salida es teóricamente construido de tal manera que se tiene una partición como se muestra  en el siguiente gráfico de ejemplo."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-anthony",
+   "id": "brief-ethics",
    "metadata": {},
    "source": [
     "<figure>\n",
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "typical-amount",
+   "id": "dental-emerald",
    "metadata": {},
    "source": [
     "Cada componente corresponde a una posición relacionada con cada una de las áreas mostradas en el gráfico. El punto de intersección puede pensarse como un cero $(0,0,0)$. En la medida en que un objeto representado aquí se aleja en dirección de un *color*, la correspondiente coordenada crece. \n",
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thorough-groove",
+   "id": "dramatic-french",
    "metadata": {},
    "source": [
     "### <span style=\"color:#4CC9F0\">Modo entrenamiento</span>"
@@ -158,15 +157,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "early-bench",
+   "id": "white-george",
    "metadata": {},
    "source": [
-    "En el modo entrenamiento, entran muchos patrones y el objetivo es determinar los pesos sinápticos que permitiran en el modo inferencia proyectar un tensor de entrada en un punto del espacio de salida."
+    "En el modo entrenamiento, entran muchos patrones y el objetivo es determinar los pesos sinápticos que permitirán en el modo inferencia proyectar un tensor de entrada en un punto del espacio de salida."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-cleaner",
+   "id": "received-swiss",
    "metadata": {},
    "source": [
     "## <span style=\"color:#4361EE\">Tensores como distribuciones de probabilidad</span>"
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-pioneer",
+   "id": "understood-native",
    "metadata": {},
    "source": [
     "### <span style=\"color:#4CC9F0\">Función softmax</span>"
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valid-white",
+   "id": "acknowledged-uniform",
    "metadata": {},
    "source": [
     "Dada una posición en el espacio de salida, digamos $z=(z_1,z_2,z_3)$, la función softmax se define se manera sencilla como:\n",
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tough-campus",
+   "id": "major-group",
    "metadata": {},
    "source": [
     "La última parte del trabajo es una trasformación matemática por fuera de la red, que convierte las coordenadas del espacio de salida (espacio de pre-probabilidad) en una distribución de probabilidad. \n",
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "artistic-selling",
+   "id": "explicit-infection",
    "metadata": {},
    "source": [
     "<figure>\n",
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-moment",
+   "id": "stupid-smoke",
    "metadata": {},
    "source": [
     "Esta representación de los tensores en forma de distribución de probabilidad asociada a las categorías es el insumo para la clasificación."
@@ -236,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
