--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Var_Prob_conjunta.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Var_Prob_conjunta.ipynb
@@ -52,7 +52,25 @@
     "|2| 101| $0.6 \\times 0.4 \\times 0.6$|0.144|0.432|\n",
     "|3| 111| $0.6 \\times 0.6\\times 0.6$|0.216|0.216 |\n",
     "\n",
-    "Recuerde que obtuvimos que $\\mathbb{E}[X]=1.8$.  Además se tiene que $\\text{Var}[X]=0.72$ y $\\sigma_X = 0.849$"
+    "Recuerde que obtuvimos que $\\mathbb{E}[X]=1.8$.  Además se tiene que $\\text{Var}[X]=0.72$ y $\\sigma_X = 0.849$. Efectivamente tenemos que\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "X &= \\{0, 1, 2, 3\\},\\\\\n",
+    "p &= \\{0.064, 0.288, 0.432, 0.216\\},\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "y\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\mathbb{E}[X] &= 0 \\times 0.064 + 1\\times 0.288 + 2\\times 0.432 + 3 \\times 0.216 = 1.8,\\\\\n",
+    "\\text{Var}[X] & = (0-1.8)^2 \\times 0.064 + (1-1.8)^2 \\times 0.288 + (2-1.8)^2 \\times 0.432 + (3-1.8)^2 \\times 0.216 = 0.72\\\\\n",
+    "\\sigma_X &=  \\sqrt{\\text{Var}[X]} = 0.849\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
@@ -193,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El concepto de correlación está completamente asociado a la funcion de distribución conjunta de dos variables aleatorias. Esencialmente, la correlación mide como covarían las dos variables aleatorias. Supongamos que $X$ y $Y$ son variables aleatorias definidas sobre el mismo espacio muestral como en el ejemplo anterior.\n",
+    "El concepto de correlación está completamente asociado a la funcion de distribución conjunta de dos variables aleatorias. Esencialmente, la correlación mide como cambian simultáneamente las dos variables aleatorias. Supongamos que $X$ y $Y$ son variables aleatorias definidas sobre el mismo espacio muestral como en el ejemplo anterior.\n",
     "\n",
     "Además supongamos que la media y la desviación estándar de cada variable se denotan como $\\mu_X$, $\\sigma_X$ y $\\mu_Y$ y $\\sigma_Y$ respectivamente. Entonces se tiene que la correlación entre las dos variables aleatorias es dada por:\n",
     "\n",
@@ -327,23 +345,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En teoría de la información, la entropía cruzada entre dos distribuciones de probabilidad  $P$ y $Q$ sobre el mismo espacio muestral mide el número promedio de bits (o nats) necesarios para identificar una distribución con la otra. \n",
+    "En esta sección vamos a suponer que tenemos dos distribuciones de probabilidad discretas $P$ y $Q$. De momento solamente nos intersan las probabilidades de cada distribución, tomadas en el mismo orden. Así, supondremos que $P=\\{p_1, \\ldots, p_N\\}$ y $Q=\\{q_1\\ldots, q_N\\}$.\n",
     "\n",
-    "En la práctica, si se considera la distribución $P$ como la distribución verdadera y a $Q$ como una distribución aproximante, entonces la entropía cruzada se define mediante:\n",
+    "\n",
+    "En teoría de la información, la entropía cruzada entre dos distribuciones de probabilidad  $P$ y $Q$ definidas sobre el mismo espacio muestral (el mismo conjunto de eventos) mide el número promedio de bits (o nats) necesarios para identificar una distribución con la otra. \n",
+    "\n",
+    "En la práctica, si se considera la distribución $P$ como la distribución verdadera o de referencia  y a $Q$ como una distribución aproximante, entonces la entropía cruzada se define mediante:\n",
     "\n",
     "\n",
     "$$\n",
     "H(P,Q) = - E_P[ \\log Q]  = - (p_1\\log q_1 + p_2\\log q_2+ \\cdots + p_n\\log q_n)\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Observe que la definición no es simétrica, es decir $H(P,Q) \\ne H(Q,P)$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Interpretación**\n",
+    "### <span style=\"color:#4CC9F0\">Interpretación</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para la interpretación, esta es una medida de que tanto difiere $Q$ de $P$, medido en bits o nats. Entonces entre menor es este valor, mejor es la aproximación. Observe que si $P=Q$, entonces se tiene que\n",
     "\n",
-    "Para la interpretación, esta es una medida de que tanto difiere $Q$ de $P$, medido en bits o nats. Entonces entre menor es este valor, mejor es la aproximación."
+    "$$\n",
+    "H(P,P) = - (p_1\\log p_1 + p_2\\log p_2+ \\cdots + p_n\\log p_n) = H(P)= \\text{entropía}(P).\n",
+    "$$\n",
+    "\n",
+    "Esto significa que el menor valor que puede tomar la entropia cruzada es exáctamente igual al valor de la entropía de la distribución de referencia."
    ]
   },
   {
@@ -477,12 +511,114 @@
     "\n",
     "Por ejemplo, supongamos que se tienen tres clases y que para un determinado tensor la clase asociada es la 1 (las posibles clases son 0,1,2).\n",
     "\n",
-    "Entonces, la distribución verdadera en este caso es $P=(0,1,0)$. Por otro lado, supongamos que la distribución que calcula la red neuronal para este tensor es $Q= (0.2, 0.7, 0.1)$. Entonces, la entropía cruzada para este tensor es dada por:\n",
+    "Entonces, la distribución verdadera en este caso es $P=(0,1,0)$. Por otro lado, supongamos que la distribución que calcula la red neuronal para este tensor es $Q= (0.2, 0.7, 0.1)$. Entonces, la entropía cruzada entre estos doe vectores de probabilidad es dada por:\n",
     "\n",
     "$$\n",
-    "H(P,Q) = - 1 \\log 0.7 = 0.357\n",
+    "H(P,Q) = -(0\\times \\log 0.2 + 1 \\times \\log 0.7+0 \\times \\log 0.1) = \\log 0.7 = 0.357\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#4361EE\">Entropía cruzada en el caso general</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, si $x$ es la entrada de la red que da origen al vector de probabilidad $(0.2, 0.7, 0.1)$, $y = 1$ es la clase a la cual pertenece $x$,  $\\text{net}_{\\theta}(\\cdot)$, representa  a la función red neuronal correspondiente con parámetros $\\theta$, en un paso del algortimo de entrenamiento o en un checkpoint en inferencia (predicción) de la red, se tendría que $\\hat{y}=\\text{net}_{\\theta}(x) = (0.2, 0.7, 0.1)$ y la entropía es dada por\n",
+    "\n",
+    "$$\n",
+    "H(y,\\hat{y}) = - y\\log \\hat{y} = - \\log (\\text{net}_{\\theta}(x))= - 1 \\log 0.7 = 0.357\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En general si $x$ es una entrada a la red neuronal $\\text{net}_{\\theta}(\\cdot)$, con vector de parámetros $\\theta$; $\\hat{y}= \\text{net}_{\\theta}(x)$, $y$ es la codificación `one-hot` de la categoría a la cual pertenece $x$, entonces vamos a escribir $y=(y_1, \\ldots, y_n)$; $\\hat{y}=(\\hat{y}_1, \\ldots, \\hat{y}_n)$ y tenemos que la entropía cruzada entre $y$ y $\\hat{y}$ es dada por\n",
+    "\n",
+    "$$\n",
+    "H(y, \\hat{y}) = -\\sum_{i=1}^n y_i\\log \\hat{y}i.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nota aclaratoria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Debido a que en la codificación *one-hot*, solamente una componente del vector es uno  y el recto cero, en la expresión anterior solamente un sumando es diferente de cero. Lo hemos escrito de esta forma, para mantener sencilla la notación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#4361EE\">Entropía cruzada en conjunto de entrenamiento</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supongamos que  se tiene un conjunto de entradas a la red $X=\\{x_1,\\ldots, x_N\\}$ y etiquetas $Y =\\{y_1, \\ldots, y_N\\}$ en codificación `one-hot`. Si hay digamos $K$ categorías, cada etiqueta $y_j$ es en realidad un vector de probabilidad de la forma $y_i =(y_{i1}, \\ldots, y_{iK})$. Supongamos adicionalmente que $\\hat{y}_i = \\text{net}_{\\theta}(x_i)$, de nuevo en codificación *one-hot* y denotemos $\\hat{Y}=(\\hat{y}_1, \\dots, \\hat{y}_N)$. Es costumbre definir la entropia cruzada entre los conjuntos de etiquetas $Y$ y $\\hat{Y}$ en la forma:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "H(Y, \\hat{Y}) = -\\frac{1}{N} \\sum_{i=1}^N H(y_i,  \\hat{y}_i) = -\\frac{1}{N} \\sum_{i=1}^N  \\sum_{j=1}^K y_{ij}   \\log \\hat{y}_{ij}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nota aclaratoria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En las API's para resde neurononales la entropía cruzada es el método preferido en modelos de clasificación. En esas API's como `Keras` es posible definir la entropía cruzada sin reducir al promedio, sino a la suma de las entropías de cada muestra. Sin embargo  para efectos de comparación es mejor tomar el promedio. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#4361EE\">Entropía cruzada log verosimilitud</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La entropía cruzada ha sido usada desde siempre por los estadísticos pero, por lo general de manera inadvertida. Dejamos como ejercicio verficar que\n",
+    "\n",
+    "$$\n",
+    "\\log \\mathfrak{L}(Y|X,\\theta) = -H(Y, \\hat{Y}),\n",
+    "$$\n",
+    "corresponde a la log verosimilutud de un modelo de clasificación clásico con $\\hat{y}_i = \\text{net}_{\\theta}(x_i)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
