--- a/Aprendizaje_Reforzado/Cuadernos/ar_Bandido_Multi_brazo .ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Bandido_Multi_brazo .ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Bandido Multibrazo)=\n",
     "# <span style=\"color:#F72585\"><center>Modelo del bandido multibrazo</center></span>"
    ]
   },
